--- a/gtkrc/.config/gtk-2.0/gtkfilechooser.ini
+++ b/gtkrc/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=260
-GeometryY=70
+GeometryX=526
+GeometryY=69
 GeometryWidth=840
 GeometryHeight=630
 SortColumn=name
